Deploy: - geoserver: no batik libs in jar (not tested) - geoserver not part of polymap3 feature